--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <title></title>
 
     <link rel="manifest" href="manifest.json">
-
+    <!-- New comment -->
     <!-- un-comment this code to enable service worker
     <script>
       if ('serviceWorker' in navigator) {
