--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title></title>
 
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="img/favicon.png" />
 
     <!-- un-comment this code to enable service worker
     <script>
