--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,6 @@
     -->
     <ion-nav-view>
     </ion-nav-view>
-
+ <script src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
   </body>
 </html>
